--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,50 @@
     <title>Ejercicio 8</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+
+    <main>
+        <section>
+            <header>
+                <h2>Citas</h2>
+            </header>
+            <figure>
+                <blockquote>
+                    <p>
+                        En el momento en que entiendo verdaderamente a mi enemigo, en el momento en que le entiendo lo
+                        suficientemente bien
+                        como para derrotarle, entonces, en ese preciso instante, también le quiero. Creo que es
+                        imposible
+                        entender realmente
+                        a alguien, saber lo que quiere, saber lo que cree, y no amarle como se ama a sí mismo. Y
+                        entonces,
+                        en ese preciso
+                        momento, cuando le quiero…
+                    </p>
+                </blockquote>
+
+                <img src="Orson_Scott_Card.jpg" alt="Orson Scott Card">
+
+                <figcaption>- Orson Scott Card -</figcaption>
+            </figure>
+
+            <figure>
+                <blockquote>
+                    <p>
+                        Si todo lo tomas personal, vivirás ofendido la mayor parte de tu vida.Recuerda que las personas
+                        no te hacen las cosas, las personas hacen cosas y tú decides si te afectan o no.
+                    </p>
+                </blockquote>
+
+                <img src="El_Principito.jpg" alt="El Principito">
+
+                <figcaption>- El principito-</figcaption>
+            </figure>
+
+        </section>
+    </main>
+
 </body>
+
 </html>
