--- a/index.html
+++ b/index.html
@@ -10,13 +10,102 @@
 </head>
 
 <body>
+    <!-- Crear un Menú de Navegación -->
+    <!-- Crear encabezado: HEADER -->
+    <header class="menu">
 
+        <!-- Logotipo del grupo: INDEX -->
+        <!-- Incluir el SVG del logotipo de INDEX -->
+        <svg class="logo" version="1.1" viewBox="0 0 445 100" xmlns="http://www.w3.org/2000/svg">
+            <g transform="translate(-99.157 -283.57)" class="index-icono" fill-opacity="1" fill="rgba(0,0,0,0)"
+                stroke="rgba(0,0,0,0)" stroke-opacity="0" stroke-width="2">
+
+                <path
+                    d="m109.3 286.11c-6.328 1.0076-5.5814 4.3217-6.4218 7.1183v81.434c0.59554 4.3619 2.0082 7.8935 6.6786 8.1149l119.83-0.14237c3.4576-0.88468 5.9553-2.9663 6.6786-7.2607l-0.64219-82.573c-0.70112-3.8391-2.9387-6.3157-7.0639-7.1183z"
+                    class="index-icono-rectangle" />
+
+                <path
+                    d="m143.66 321.37 0.8542 5.2676-16.23 10.25 16.087 9.8233-0.14237 4.4134-1.566 0.28473-20.074-11.816-0.28474-4.8405z"
+                    fill-opacity=".00775" fill="currentColor" stroke="currentColor" stroke-opacity=".92"
+                    stroke-width="2" class="index-icono-menor" />
+
+                <path d="m173.7 307.98-16.515 34.453 14.237 6.8336 16.799-35.022z" fill-opacity=".00775"
+                    fill="currentColor" stroke="currentColor" stroke-opacity=".92" stroke-width="2"
+                    class="index-icono-rectangulo" />
+
+                <path d="m154.9 348.41 13.667 6.2641-12.244 8.8267z" fill-opacity=".00775" fill="currentColor"
+                    stroke="currentColor" stroke-opacity=".92" stroke-width="2" class="index-icono-triangulo" />
+
+                <path
+                    d="m191.78 325.35 3.4168-3.5592 20.216 13.24-0.4271 4.8405-20.074 12.528-2.2779-2.4202 0.71183-2.5626 15.945-10.108z"
+                    fill-opacity=".00775" fill="currentColor" stroke="currentColor" stroke-opacity=".92"
+                    stroke-width="2" class="index-icono-mayor" />
+
+                <g transform="matrix(1.114 0 0 .89767 -.77861 1.6107)" fill-opacity=".00775" fill="currentColor"
+                    stroke="currentColor" stroke-opacity=".92" stroke-width="2" class="index-texto">
+
+                    <path
+                        d="m223.67 347.47 0.45-3.69h26.37l-0.54 3.69q-3.87 0.72-6.21 2.7v47.25q1.8 1.71 6.75 2.7l-0.63 3.69h-26.19l0.36-3.69q4.05-0.63 6.48-2.7v-47.25q-1.98-1.98-6.84-2.7z"
+                        fill-opacity=".00775" fill="currentColor" stroke="currentColor" stroke-opacity=".92"
+                        stroke-width="2" class="index-texto-i" />
+
+                    <path
+                        d="m306.47 403.81h-13.68l-23.76-41.4v35.01q2.07 1.89 6.75 2.88l-0.63 3.51h-19.44l0.36-3.69q2.97-0.54 5.13-2.7v-47.25q-1.89-1.62-5.49-2.88l0.36-3.51h17.73l24.84 43.56v-37.17q-2.34-1.98-6.21-2.7l0.45-3.69h19.62l-0.54 3.51q-3.51 1.08-5.49 2.88z"
+                        fill-opacity=".00775" fill="currentColor" stroke="currentColor" stroke-opacity=".92"
+                        stroke-width="2" class="index-texto-n" />
+
+                    <path
+                        d="m337.43 343.78q18.45 0 26.82 7.2t8.37 22.86-8.46 22.86q-8.46 7.11-27.27 7.11h-19.08l0.36-3.69q2.88-0.63 5.04-2.61v-47.43q-1.62-1.53-5.4-2.79l0.36-3.51zm2.88 5.58h-3.78v48.51q0.81 0.36 3.51 0.36 9.72 0 14.04-5.85 4.41-5.85 4.41-18.63 0-12.87-4.23-18.63t-13.95-5.76z"
+                        fill-opacity=".00775" fill="currentColor" stroke="currentColor" stroke-opacity=".92"
+                        stroke-width="2" class="index-texto-d" />
+
+                    <path
+                        d="m425.27 358.63q-2.07 0.63-3.42 0.63-1.26 0-3.24-0.36-1.35-6.21-3.87-9.63h-15.12v21.33l8.37-0.63q1.62-0.18 2.97-1.8 1.44-1.62 2.07-4.23h4.68v18.63h-4.68q-1.26-3.6-2.43-5.04t-2.7-1.62l-8.28-0.72v23.04h15.75q2.88-4.32 4.23-11.43 1.89-0.27 3.51-0.27 1.71 0 3.15 0.27l-0.9 17.01h-44.46l0.36-3.69q3.51-0.54 5.13-2.25v-48.15q-2.16-1.89-5.49-2.61l0.27-3.33h43.74z"
+                        fill-opacity=".00775" fill="currentColor" stroke="currentColor" stroke-opacity=".92"
+                        stroke-width="2" class="index-texto-e" />
+
+                    <path
+                        d="m435.71 397.96 15.21-22.5-16.2-26.01q-1.26-1.35-4.59-2.07l0.45-3.6h24.66l-0.54 3.6q-3.24 0.09-5.04 1.89l9.72 15.66 9.81-14.67q-1.98-1.98-6.21-2.61l0.45-3.6h19.89l-0.45 3.6q-4.23 0.18-5.67 2.25l-14.13 21.06 17.1 27.36q1.44 1.35 4.59 1.89l-0.45 3.6h-24.66l0.54-3.6q3.33-0.18 5.04-1.89l-10.53-16.83-10.89 16.2q2.07 1.89 6.21 2.52l-0.45 3.6h-19.89l0.45-3.6q4.23-0.18 5.58-2.25z"
+                        fill-opacity=".00775" fill="currentColor" stroke="currentColor" stroke-opacity=".92"
+                        stroke-width="2" class="index-texto-x" />
+
+                </g>
+            </g>
+        </svg>
+        <!-- <img class="logo" src="logo-index-svg.svg" alt="Logotipo"> -->
+
+        <!-- Menú de navegación: NAV -->
+        <nav>
+
+            <!-- Elementos del menú -->
+            <ul class="nav__elements">
+
+                <!-- Menú: INICIO -->
+                <li><a href="#">Inicio</a></li>
+
+                <!-- Menú: ¿QUIENES SOMOS? -->
+                <li><a href="#">¿Quiénes Somos?</a></li>
+
+                <!-- Menú: CONTACTO -->
+                <li><a href="#">Contacto</a></li>
+            </ul>
+            <!-- Fin de los elementos -->
+
+        </nav>
+        <!-- Fin del menú -->
+
+    </header>
+    <!-- Fin del HEADER -->
+    <!-- Fin del menú de navegación -->
     <main>
+
         <section>
+
             <header>
                 <h2>Citas</h2>
             </header>
-            <figure>
+
+            <figure id="cita__1">
                 <blockquote>
                     <p>
                         En el momento en que entiendo verdaderamente a mi enemigo, en el momento en que le entiendo lo
@@ -29,22 +118,22 @@
                         en ese preciso
                         momento, cuando le quiero…
                     </p>
-                </blockquote>
 
-                <img src="Orson_Scott_Card.jpg" alt="Orson Scott Card">
+                    <img src="Orson_Scott_Card.jpg" alt="Orson Scott Card">
+                </blockquote>
 
                 <figcaption>- Orson Scott Card -</figcaption>
             </figure>
 
-            <figure>
+            <figure id="cita__2">
                 <blockquote>
                     <p>
                         Si todo lo tomas personal, vivirás ofendido la mayor parte de tu vida.Recuerda que las personas
                         no te hacen las cosas, las personas hacen cosas y tú decides si te afectan o no.
                     </p>
-                </blockquote>
 
-                <img src="El_Principito.jpg" alt="El Principito">
+                    <img src="El_Principito.jpg" alt="El Principito">
+                </blockquote>
 
                 <figcaption>- El principito-</figcaption>
             </figure>
