--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicio 8</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="logo-index-32x32.png" sizes="32x32">
 </head>
 
 <body>
